htmxology-macros/src/routing_controller/snapshots/htmxology_macros__routing_controller__snapshot_tests__default_response_type.snap
---
source: htmxology-macros/src/routing_controller/mod.rs
expression: test_routing_controller(input)
---
#[allow(unused)]
mod __test {
    impl htmxology::HasSubcontroller<'_, HomeController> for AppController {
        fn as_subcontroller(&self) -> HomeController {
            self.into()
        }
        fn convert_response(
            htmx: &htmxology::htmx::Request,
            response: <HomeController as htmxology::Controller>::Response,
        ) -> <Self as htmxology::Controller>::Response {
            response.into()
        }
    }
    #[derive(Debug, Clone, htmxology::Route)]
    pub enum AppRoute {
        #[route("")]
        Home(#[subroute] <HomeController as htmxology::Controller>::Route),
    }
    impl htmxology::Controller for AppController {
        type Route = AppRoute;
        type Args = ();
        type Response = Result<axum::response::Response, axum::response::Response>;
        async fn handle_request(
            &self,
            route: Self::Route,
            htmx: htmxology::htmx::Request,
            parts: http::request::Parts,
            server_info: &htmxology::ServerInfo,
            args: Self::Args,
        ) -> Self::Response {
            match route {
                Self::Route::Home(route) => {
                    let response = htmxology::SubcontrollerExt::get_subcontroller::<
                        HomeController,
                    >(self)
                        .handle_request(route, htmx.clone(), parts, server_info, args)
                        .await;
                    <Self as htmxology::HasSubcontroller<
                        '_,
                        HomeController,
                    >>::convert_response(&htmx, response)
                }
            }
        }
    }
    impl From<AppController> for htmxology::ControllerRouter {
        fn from(controller: AppController) -> Self {
            htmxology::ControllerRouter::new(controller, |_| async { <()>::default() })
        }
    }
}
