htmxology-macros/src/routing_controller/snapshots/htmxology_macros__routing_controller__snapshot_tests__single_subcontroller_catch_all.snap
---
source: htmxology-macros/src/routing_controller/mod.rs
expression: test_routing_controller(input)
---
#[allow(unused)]
mod __test {
    impl htmxology::HasSubcontroller<'_, NotFoundController> for AppController {
        fn as_subcontroller(&self) -> NotFoundController {
            self.into()
        }
        fn convert_response(
            htmx: &htmxology::htmx::Request,
            response: <NotFoundController as htmxology::Controller>::Response,
        ) -> <Self as htmxology::Controller>::Response {
            response.into()
        }
    }
    #[derive(Debug, Clone, htmxology::Route)]
    pub enum AppRoute {
        #[catch_all]
        NotFound(<NotFoundController as htmxology::Controller>::Route),
    }
    impl htmxology::Controller for AppController {
        type Route = AppRoute;
        type Args = ();
        type Response = Result<axum::response::Response, axum::response::Response>;
        async fn handle_request(
            &self,
            route: Self::Route,
            htmx: htmxology::htmx::Request,
            parts: http::request::Parts,
            server_info: &htmxology::ServerInfo,
            args: Self::Args,
        ) -> Self::Response {
            match route {
                Self::Route::NotFound(route) => {
                    let response = htmxology::SubcontrollerExt::get_subcontroller::<
                        NotFoundController,
                    >(self)
                        .handle_request(route, htmx.clone(), parts, server_info, args)
                        .await;
                    <Self as htmxology::HasSubcontroller<
                        '_,
                        NotFoundController,
                    >>::convert_response(&htmx, response)
                }
            }
        }
    }
}
