htmxology-macros/src/routing_controller/snapshots/htmxology_macros__routing_controller__snapshot_tests__subcontroller_with_params_and_convert.snap
---
source: htmxology-macros/src/routing_controller/mod.rs
expression: test_routing_controller(input)
---
#[allow(unused)]
mod __test {
    impl htmxology::HasSubcontroller<'_, BlogController, (u32,)> for AppController {
        fn as_subcontroller(&self, args: (u32,)) -> BlogController {
            Self::make_blog(self, args.0)
        }
        fn convert_response(
            htmx: &htmxology::htmx::Request,
            response: <BlogController as htmxology::Controller>::Response,
        ) -> <Self as htmxology::Controller>::Response {
            response.into()
        }
    }
    #[derive(Debug, Clone, htmxology::Route)]
    pub enum AppRoute {
        #[route("blog/{blog_id}/")]
        Blog {
            blog_id: u32,
            #[subroute]
            subroute: <BlogController as htmxology::Controller>::Route,
        },
    }
    impl htmxology::Controller for AppController {
        type Route = AppRoute;
        type Args = ();
        type Response = Result<axum::response::Response, axum::response::Response>;
        async fn handle_request(
            &self,
            route: Self::Route,
            htmx: htmxology::htmx::Request,
            parts: http::request::Parts,
            server_info: &htmxology::ServerInfo,
        ) -> Self::Response {
            match route {
                Self::Route::Blog { blog_id, subroute } => {
                    let response = htmxology::SubcontrollerExt::get_subcontroller_with::<
                        BlogController,
                    >(self, (blog_id,))
                        .handle_request(subroute, htmx.clone(), parts, server_info)
                        .await;
                    <Self as htmxology::HasSubcontroller<
                        '_,
                        BlogController,
                        (u32,),
                    >>::convert_response(&htmx, response)
                }
            }
        }
    }
}
