htmxology-macros/src/routing_controller/snapshots/htmxology_macros__routing_controller__snapshot_tests__subcontroller_with_single_param.snap
---
source: htmxology-macros/src/routing_controller/mod.rs
expression: test_routing_controller(input)
---
#[allow(unused)]
mod __test {
    impl htmxology::AsSubcontroller<'_, BlogController, (u32,)> for AppController {
        fn as_subcontroller(&self, args: (u32,)) -> BlogController {
            <BlogController>::from((self, args.0))
        }
    }
    #[derive(Debug, Clone, htmxology::Route)]
    pub enum AppRoute {
        #[route("blog/{blog_id}/")]
        Blog {
            blog_id: u32,
            #[subroute]
            subroute: <BlogController as htmxology::Controller>::Route,
        },
    }
    impl htmxology::Controller for AppController {
        type Route = AppRoute;
        type Args = ();
        type Output = axum::response::Response;
        type ErrorOutput = axum::response::Response;
        async fn handle_request(
            &self,
            route: Self::Route,
            htmx: htmxology::htmx::Request,
            parts: http::request::Parts,
            server_info: &htmxology::ServerInfo,
        ) -> Result<Self::Output, Self::ErrorOutput> {
            match route {
                Self::Route::Blog { blog_id, subroute } => {
                    use axum::response::IntoResponse;
                    let result = self
                        .get_subcontroller_with::<BlogController>((blog_id,))
                        .handle_request(subroute, htmx, parts, server_info)
                        .await;
                    match result {
                        Ok(output) => Ok(output.into_response()),
                        Err(error) => Err(error.into_response()),
                    }
                }
            }
        }
    }
}
