htmxology-macros/src/routing_controller/snapshots/htmxology_macros__routing_controller__snapshot_tests__with_extra_derives_and_other_options.snap
---
source: htmxology-macros/src/routing_controller/mod.rs
expression: test_routing_controller(input)
---
#[allow(unused)]
mod __test {
    impl htmxology::HasSubcontroller<'_, DashboardController> for AppController {
        fn as_subcontroller(&self) -> DashboardController {
            self.into()
        }
    }
    #[derive(Debug, Clone, htmxology::Route, PartialEq, Eq)]
    pub enum AppRoute {
        #[route("dashboard/")]
        Dashboard(#[subroute] <DashboardController as htmxology::Controller>::Route),
    }
    impl htmxology::Controller for AppController {
        type Route = AppRoute;
        type Args = Session;
        type Response = Result<MyResponse, MyError>;
        async fn handle_request(
            &self,
            route: Self::Route,
            htmx: htmxology::htmx::Request,
            parts: http::request::Parts,
            server_info: &htmxology::ServerInfo,
            args: Self::Args,
        ) -> Self::Response {
            match route {
                Self::Route::Dashboard(route) => {
                    let response = htmxology::SubcontrollerExt::get_subcontroller::<
                        DashboardController,
                    >(self)
                        .handle_request(route, htmx.clone(), parts, server_info, args)
                        .await;
                    response.into()
                }
            }
        }
    }
}
